Fixed navigation back

--- a/Arrangementer/events.html
+++ b/Arrangementer/events.html
@@ -16,13 +16,13 @@
    
     <nav class="navbar">
         <ul>
-            <li><a href="#">Om Domen</a></li>
-            <li><a href="#">Arrangementer</a></li>
+            <li><a href="../Om/index.html">Om Domen</a></li>
+            <li><a href="../Arrangementer/events.html">Arrangementer</a></li>
             <li><a href="#">Domens Café</a></li>
-            <li><a href="#">Galleri</a></li>
+            <li><a href="../Galleri/index.html">Galleri</a></li>
             <input type="text" placeholder="Search..">
         </ul>
-        <img src="domen-kopi.png" alt="Domen" class="top-left-image">
+        <a href="../Forside/index.html"><img src="domen-kopi.png" alt="Domen" class="top-left-image"></a>
     </nav>
     <div class="content">
     </div>
