--- a/Forside/index.html
+++ b/Forside/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-     <img src="DomenLogo.png" alt="Logo" id="Logo">
+     <a href="../Forside/index.html"><img src="DomenLogo.png" alt="Logo" id="Logo"></a>
 
     <div>
     <ul >
