--- a/Galleri/index.html
+++ b/Galleri/index.html
@@ -10,17 +10,17 @@
     <header class="topbar">
         <div class="topbar-container">
             <a href="#help">Domen</a>
-            <img src="./image_copy.png" alt="Domen" class="topbar-image">
+            <a href="../Forside/index.html"></a><img src="./image_copy.png" alt="Domen" class="topbar-image"></a>
             <img src="./aarhus.png" alt="Aarhus Kommune" class="topbar-commune-image">
         </div>
     </header>
 
     <nav>
     <ul id="navbar">
-        <li><a href="#">Om Domen</a></li>
-        <li><a href="#">Arrangementer</a></li>
+        <li><a href="../Om/index.html">Om Domen</a></li>
+        <li><a href="../Arrangementer/events.html">Arrangementer</a></li>
         <li><a href="#">Domens café</a></li>
-        <li><a href="#">Galleri</a></li>
+        <li><a href="../Galleri/index.html">Galleri</a></li>
     </ul>
     <div class="search-container">
         <input type="text" placeholder="Search..">
