--- a/Om/index.html
+++ b/Om/index.html
@@ -15,13 +15,13 @@
     </div>
     
     <nav class="navbar">
-      <img src="Skærmbillede_2024-09-17_kl._09.40.49-removebg-preview.png" alt="Domen logo2" width="30" height="40" class="top-left-image">
+      <a href="../Forside/index.html"><img src="Skærmbillede_2024-09-17_kl._09.40.49-removebg-preview.png" alt="Domen logo2" width="30" height="40" class="top-left-image"></a>
       
       <ul>
-            <li><a href="#">Om Domen</a></li>
-            <li><a href="#">Arrangementer</a></li>
+            <li><a href="../Om/index.html">Om Domen</a></li>
+            <li><a href="../Arrangementer/events.html">Arrangementer</a></li>
             <li><a href="#">Domens Café</a></li>
-            <li><a href="#">Galleri</a></li>
+            <li><a href="../Galleri/index.html">Galleri</a></li>
             <input type="text" placeholder="Search..">
         </ul>
     </nav>
